syntax = "proto3";
package SpringJavaConfigExample;

option java_package="com.lvxiao.proto";
option java_outer_classname="GrpcTestServiceProto";
option java_multiple_files=true;

service Greeter{

     rpc SayHello(HelloRequest) returns (HelloReply){}
}

message HelloRequest{
    string name = 1;
}

message HelloReply {
    string message = 1;
}